Fixed docker file and added more endpoints

--- a/client-api/Dockerfile
+++ b/client-api/Dockerfile
@@ -6,5 +6,5 @@ COPY ./ /app/
 RUN MAVEN_OPTS=-Djansi.force=true ./mvnw -Dmaven.repo.local=/app/.mvn/repository compile \
     jar:jar spring-boot:repackage --batch-mode -Dstyle.color=always --activate-profiles dockerfile-build,no-coverage
 
-CMD java -jar quorum-client-api.jar
+CMD java -jar /app/target/quorum-client-api.jar
 
