--- a/client-api/src/main/resources/application.properties
+++ b/client-api/src/main/resources/application.properties
@@ -1,2 +1,16 @@
 quorum.host=${QUORUM_HOST:#{"localhost"}}
 quorum.port=${QUORUM_PORT:#{"24001"}}
+quorum.constellation.pub.key1=p6m2ZLsWrwUZ40LfkwCI38abGd5SVFIwiKQnrbcOCD4=
+quorum.constellation.pub.key2=8QH4amW71rBaqRBYG88RUDb315n/6Uwxu23Z7AJK520=
+quorum.constellation.pub.key3=lP/xh0l1asOZy8hk4LzeTEMrcgNzVWJmLDWVld8mx2U=
+web3.rpc.polling.interval=100
+web3.tx.mgr.connection.attempts=40
+web3.tx.mgr.sleep.duration=100
+web3.personal.account.unlock.duration=300000
+web3.rpc.connection.timeout=10000
+web3.rpc.read.timeout=0
+web3.gas.price=0
+web3.gas.limit=1000000
+web3.network.id=1
+
+
