--- a/client-api/pom.xml
+++ b/client-api/pom.xml
@@ -33,7 +33,12 @@
         <dependency>
             <groupId>org.web3j</groupId>
             <artifactId>quorum</artifactId>
-            <version>4.0.6</version>
+            <version>4.5.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.web3j</groupId>
+            <artifactId>web3j-maven-plugin</artifactId>
+            <version>4.2.0</version>
         </dependency>
 
     </dependencies>
