--- a/client-api/pom.xml
+++ b/client-api/pom.xml
@@ -50,6 +50,30 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.web3j</groupId>
+                <artifactId>web3j-maven-plugin</artifactId>
+                <version>4.2.0</version>
+                <executions>
+                    <execution>
+                        <configuration>
+                            <packageName>thoughtworks.quorum.clientapi.contract</packageName>
+                            <sourceDestination>${project.basedir}/src/main/java/thoughtworks/quorum/clientapi/contract/</sourceDestination>
+                            <nativeJavaType>true</nativeJavaType>
+                            <soliditySourceFiles>
+                                <directory>${project.basedir}/src/main/resources/</directory>
+                                <includes>
+                                    <include>*.sol</include>
+                                </includes>
+                            </soliditySourceFiles>
+                        </configuration>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>generate-sources</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
