Optimized docker file

--- a/client-api/Dockerfile
+++ b/client-api/Dockerfile
@@ -1,7 +1,11 @@
 FROM openjdk:11-jdk-slim
 WORKDIR /app
+COPY ./.mvn /app/.mvn
+COPY ./mvnw ./pom.xml  /app/
 
-COPY ./ /app/
+RUN MAVEN_OPTS=-Djansi.force=true ./mvnw -Dmaven.repo.local=/app/.mvn/repository dependency:go-offline --batch-mode
+
+COPY ./src /app/src
 
 RUN MAVEN_OPTS=-Djansi.force=true ./mvnw -Dmaven.repo.local=/app/.mvn/repository compile \
     jar:jar spring-boot:repackage --batch-mode -Dstyle.color=always --activate-profiles dockerfile-build,no-coverage
