--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,3 +87,14 @@ services:
           ipv4_address: '172.10.1.4'
     ports:
         - 8080:8080
+  web:
+    hostname: 172.10.1.5
+    build: ./web-app/
+    container_name: web
+    depends_on: 
+      - api
+    networks:
+        quorum_net:
+          ipv4_address: '172.10.1.5'
+    ports:
+        - 8081:8081
