--- a/web-app/package.json
+++ b/web-app/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "http-server --cors"
+    "start": "http-server --cors -p 8081"
   },
   "author": "",
   "license": "ISC",
